--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ paypal.clientSecret="ECv7Xgb58jMJzdwI1wpNlTMnBVLpi9kAJSSFGH1ISEBiqe6cKcwFxjId4jL
 
 # ???? ?? live??
 paypal.mode="sandbox"
+
+paypal.receiver.email=""
