--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
             <version>2.6.0</version>
         </dependency>
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-messaging</artifactId>
             <version>5.2.15.RELEASE</version>
