--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ paypal.clientSecret=EFPb6uk7fj_s6vdpNYN3-pqY5UjX7-6sdxkbUNJoVSV1ONlor89N0xLOgFqH
 paypal.mode=sandbox
 
 paypal.receiver.email=""
+
+#spring.datasource.druid.iot.url=jdbc:mysql://192.168.48.231:3306/iot?useUnicode=true&characterEncoding=utf8&useSSL=false
+#spring.datasource.druid.iot.username=bi-read
+#spring.datasource.druid.iot.password=973zNjy!JvTQ^4h2
+#spring.datasource.druid.iot.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.druid.iot.type=com.alibaba.druid.pool.DruidDataSource
