--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
-
-paypal.clientId=AXHbJATli3D1GdVjpr2bLlIgLPxPAUlTIUhdna9oNVhJIsF3jH_p5bxgrMtBi3n87OSKWLIQtGYLb9zX
-paypal.clientSecret=EFPb6uk7fj_s6vdpNYN3-pqY5UjX7-6sdxkbUNJoVSV1ONlor89N0xLOgFqHBqswtQ6m9_i0LlFYa1H3
-
-# ???? ?? live??
-paypal.mode=sandbox
-
-paypal.receiver.email=""
-
-#spring.datasource.druid.iot.url=jdbc:mysql://192.168.48.231:3306/iot?useUnicode=true&characterEncoding=utf8&useSSL=false
-#spring.datasource.druid.iot.username=bi-read
-#spring.datasource.druid.iot.password=973zNjy!JvTQ^4h2
+#
+#paypal.clientId=AXHbJATli3D1GdVjpr2bLlIgLPxPAUlTIUhdna9oNVhJIsF3jH_p5bxgrMtBi3n87OSKWLIQtGYLb9zX
+#paypal.clientSecret=EFPb6uk7fj_s6vdpNYN3-pqY5UjX7-6sdxkbUNJoVSV1ONlor89N0xLOgFqHBqswtQ6m9_i0LlFYa1H3
+#
+## ???? ?? live??
+#paypal.mode=sandbox
+#
+#paypal.receiver.email=""
+#
+##spring.datasource.druid.iot.url=jdbc:mysql://192.168.48.231:3306/iot?useUnicode=true&characterEncoding=utf8&useSSL=false
+##spring.datasource.druid.iot.username=bi-read
+##spring.datasource.druid.iot.password=973zNjy!JvTQ^4h2
+##spring.datasource.druid.iot.driver-class-name=com.mysql.jdbc.Driver
+##spring.datasource.druid.iot.type=com.alibaba.druid.pool.DruidDataSource
+#
+#spring.datasource.druid.iot.url=jdbc:mysql://mysql-jooan-us-west-2-iot-0000-test.cuxd2kuj83ue.us-west-2.rds.amazonaws.com:3306/pay?characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
+#spring.datasource.druid.iot.username=test
+#spring.datasource.druid.iot.password=Darj!C2vHzf5g^nE
 #spring.datasource.druid.iot.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.druid.iot.type=com.alibaba.druid.pool.DruidDataSource
